# megadeck

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
examples/: build_sample_deck.py
megadeck/: __init__.py  cli.py  mcp_server.py
megadeck/animations/: __init__.py  choreography.py  easing.py  entrance.py  spring.py  transitions.py
megadeck/core/: __init__.py  critic.py  import_pptx.py  llm.py  pptx_audit.py  preview.py  prompts.py  renderer.py  rhythm.py  schemas.py  selfheal.py
megadeck/design_system/: __init__.py  charts.py  compositions.py  content_icon.py  decorations.py  effects.py  icons.py  illustrate.py  primitives.py  registry.py  themegen.py  tokens.py  type_pairs.py  unsplash.py  variants.py
megadeck/design_system/adapters/: bulk_generate.py  catppuccin.py  coolors.py  figma.py  material_you.py  open_color.py  radix.py  shadcn.py  tailwind.py  vscode.py
megadeck/design_system/layouts/: __init__.py  fill.py  ingest.py  registry.py
megadeck/design_system/pool/: anthropic.json  apple-glass.json  apple.json  aurora-orbs.json  bauhaus.json  blueprint.json  cursor.json  cyber-mesh.json  dieter-rams.json  figma.json  forest.json  github-dark.json  gradient-mesh.json  grid-paper.json  huggingface.json  ibm-carbon.json  material-you.json  memphis.json  midnight.json  mint-corner.json  molten.json  notion.json  ocean.json  openai.json  paper-stripe.json  posthog.json  raycast.json  sakura.json  stripe.json  sunset-band.json  sunset.json  supabase.json  twitter-x.json  violet-noir.json  y-combinator.json  y2k-chrome.json  zen.json
megadeck/design_system/templates/: __init__.py  agenda.py  bar_chart.py  before_after.py  bento_grid.py  bento_grid_variants.py  call_to_action.py  code_snippet.py  (+35 more)
tests/: conftest.py  test_adapters.py  test_animations.py  test_audit.py  test_critic.py  test_decorations.py  test_effects.py  test_import.py  test_motion_port.py  test_phase2_templates.py  test_phase3_imagery.py  test_phase3_templates.py  test_registry.py  test_renderer.py  test_schemas.py  test_themes.py  test_variants_adapters.py
(+759 files in other folders)
