[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "megadeck"
version = "0.1.0"
description = "AI-driven PowerPoint generation with built-in MCP server for Claude Code and any MCP-compatible client."
authors = [{ name = "Orkhan Javadli", email = "ojavadli@mit.edu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "powerpoint", "pptx", "presentation", "slides", "llm", "mcp",
    "claude-code", "mcp", "ai", "design", "generation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Multimedia :: Graphics :: Presentation",
]
dependencies = [
    "python-pptx>=1.0.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "instructor>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pillow>=10.0.0",
    "pdf2image>=1.17.0",
    "fastmcp>=0.4.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
google = ["google-generativeai>=0.8.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "pyright>=1.1.0",
]

[project.scripts]
megadeck = "megadeck.cli:app"
megadeck-mcp = "megadeck.mcp_server:main"

[project.urls]
Homepage = "https://github.com/ojavadli/megadeck"
Repository = "https://github.com/ojavadli/megadeck"
Issues = "https://github.com/ojavadli/megadeck/issues"
Documentation = "https://github.com/ojavadli/megadeck#readme"

[tool.hatch.build.targets.wheel]
packages = ["megadeck"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C90"]
ignore = ["E501"]  # line too long handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
